--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+@keyframes nrotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+#fav-loader {
+  fill: #fff;
+  animation: nrotate 0.3s infinite;
+}
 .nmonit-container {
   padding-top: 68px;
 }
