--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,8 @@ a.nm-active button {
 /* Header */
 .header__menu-items {
   flex: 1;
+  padding-left: 0;
+  margin: 0;
   list-style: none;
 }
 .header__menu-item {
